feat: add pagination to find all endpoint
